--- a/lib/account-management/sign-up/sign-up.component.less
+++ b/lib/account-management/sign-up/sign-up.component.less
@@ -27,6 +27,12 @@
 					width: 218px;
 				}
 			}
+
+			& .gender-group{
+				display: flex;
+				justify-content: space-around;
+				padding: 20px 0;
+			}
 		}
 	}
 }
