[SP-66] Added background

--- a/lib/account-management/sign-up/sign-up.component.less
+++ b/lib/account-management/sign-up/sign-up.component.less
@@ -3,7 +3,7 @@
 	display: flex;
 	align-items: center;
 	flex-direction: column;
-	margin-top: 64px;
+	padding-top: 64px;
 
 	& .sign-up-card.mdl-card {
 
