--- a/lib/shared/components/main/main.component.html
+++ b/lib/shared/components/main/main.component.html
@@ -1,4 +1,4 @@
-<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+<div class="layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
     <header class="header mdl-layout__header">
         <div class="mdl-layout__header-row">
