--- a/lib/shared/components/main/main.component.less
+++ b/lib/shared/components/main/main.component.less
@@ -1,23 +1,31 @@
-.header {
+.layout {
+  & .header {
 
-  & .root-link{
+    & .root-link {
 
-    text-decoration: none;
-    height: 52px;
-
-    & img{
+      text-decoration: none;
       height: 52px;
-    }
 
-    & .slogan {
-      display: block;
-      color: #ffffff;
-      font-weight: bold;
-      font-style: italic;
-      left: 36px;
-      position: relative;
-      top: -19px;
-      font-size: 0.75em;
+      & img {
+        height: 52px;
+      }
+
+      & .slogan {
+        display: block;
+        color: #ffffff;
+        font-weight: bold;
+        font-style: italic;
+        left: 36px;
+        position: relative;
+        top: -19px;
+        font-size: 0.75em;
+      }
     }
+  }
+
+  & .mdl-layout__content {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
   }
 }
