[SP-68] Implemented Change Password functionality

--- a/lib/account-management/restore-access/change-password/change-password.component.html
+++ b/lib/account-management/restore-access/change-password/change-password.component.html
@@ -36,9 +36,9 @@
                    ngControl="passwordRepeat"
                    #passwordRepeat="ngForm"/>
 
-        </div>
-        <sp-validation-notification *ngIf="!isEqual(passwordRepeat, password)"
-                                    [message]="'Passwords are not equal'"></sp-validation-notification>
-        <button mdRaisedButton class="md-primary next-btn">Change password</button>
-    </div>
+      </div>
+      <sp-validation-notification *ngIf="!isEqual(passwordRepeat, password)"
+                                  [message]="'Passwords are not equal'"></sp-validation-notification>
+      <button class="md-primary next-btn" (click)="applyPasswordChanging()">Change password</button>
+   </div>
 </form>
