[SP-84] Extracted input component

--- a/lib/account-management/login/login.component.html
+++ b/lib/account-management/login/login.component.html
@@ -8,27 +8,18 @@
         <div class="mdl-card__supporting-text">
             <form class="form" name="login" [ngFormModel]="form">
 
-                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                    <input class="mdl-textfield__input" type="text" name="email"
-                           id="current-email"
-                           ngControl="email"
-                           #email="ngForm"/>
-                    <label class="mdl-textfield__label" for="current-email">Email*</label>
-                    <sp-error-tooltip *ngIf="isRequired(email)" [message]="'Email is required'"></sp-error-tooltip>
-                    <sp-error-tooltip *ngIf="!hasRequiredError(email)" [message]="'Email is incorrect'"></sp-error-tooltip>
-                </div>
+                <sp-input name="email" placeholder="Email*" [control]="emailControl">
+                    <span *ngIf="isRequired(emailControl)" class="error">Email is required</span>
+                    <span *ngIf="!hasRequiredError(emailControl)" class="error">Email is incorrect</span>
+                </sp-input>
 
-                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                    <input class="mdl-textfield__input" type="text" name="password" id="current-password"
-                           ngControl="password"
-                           #password="ngForm"/>
-                    <label class="mdl-textfield__label" for="current-password">Password</label>
-
-                    <sp-error-tooltip *ngIf="isRequired(password)" [message]="'Password is required'"></sp-error-tooltip>
-                    <sp-error-tooltip *ngIf="isInsufficientLength(password)" [message]="'Password is too short'"></sp-error-tooltip>
-                    <sp-error-tooltip *ngIf="isLengthExcess(password)" [message]="'Password is too long'"></sp-error-tooltip>
-                    <sp-error-tooltip *ngIf="!hasRangeError(password)" [message]="'Password is incorrect'"></sp-error-tooltip>
-                </div>
+                <sp-input name="password" type="password" placeholder="Password*"
+                          [control]="passwordControl">
+                    <span *ngIf="isRequired(passwordControl)" class="error">Password is required</span>
+                    <span *ngIf="isInsufficientLength(passwordControl)" class="error">Password is too short</span>
+                    <span *ngIf="isLengthExcess(passwordControl)" class="error">Password is too long</span>
+                    <span *ngIf="!hasRangeError(passwordControl)" class="error">Password is incorrect</span>
+                </sp-input>
 
                 <button class="login-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored"
                         (click)="login()">Sign in
