[SP-84] Extracted card component

--- a/lib/account-management/login/login.component.less
+++ b/lib/account-management/login/login.component.less
@@ -5,7 +5,7 @@
   flex-direction: column;
   padding-top: 64px;
 
-  & .login-card.mdl-card {
+  & .login-card {
 
     width: 512px;
 
@@ -13,8 +13,6 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-
-      padding-bottom: 32px;
 
       & > * {
         width: 90%;
