--- a/lib/account-management/login/login.component.html
+++ b/lib/account-management/login/login.component.html
@@ -1,38 +1,34 @@
 <div class="login">
-    <div class="login-card mdl-card mdl-shadow--4dp">
+    <sp-card class="login-card">
 
-        <div class="mdl-card__title">
-            <h2 class="mdl-card__title-text">Login</h2>
-        </div>
+        <div class="title">Login</div>
 
-        <div class="mdl-card__supporting-text">
-            <form class="form" name="login" [ngFormModel]="form">
+        <form class="content form" name="login" [ngFormModel]="form">
 
-                <sp-input name="email" placeholder="Email*" [control]="emailControl">
-                    <span *ngIf="isRequired(emailControl)" class="error">Email is required</span>
-                    <span *ngIf="!hasRequiredError(emailControl)" class="error">Email is incorrect</span>
-                </sp-input>
+            <sp-input name="email" placeholder="Email*" [control]="emailControl">
+                <span *ngIf="isRequired(emailControl)" class="error">Email is required</span>
+                <span *ngIf="!hasRequiredError(emailControl)" class="error">Email is incorrect</span>
+            </sp-input>
 
-                <sp-input name="password" type="password" placeholder="Password*"
-                          [control]="passwordControl">
-                    <span *ngIf="isRequired(passwordControl)" class="error">Password is required</span>
-                    <span *ngIf="isInsufficientLength(passwordControl)" class="error">Password is too short</span>
-                    <span *ngIf="isLengthExcess(passwordControl)" class="error">Password is too long</span>
-                    <span *ngIf="!hasRangeError(passwordControl)" class="error">Password is incorrect</span>
-                </sp-input>
+            <sp-input name="password" type="password" placeholder="Password*"
+                      [control]="passwordControl">
+                <span *ngIf="isRequired(passwordControl)" class="error">Password is required</span>
+                <span *ngIf="isInsufficientLength(passwordControl)" class="error">Password is too short</span>
+                <span *ngIf="isLengthExcess(passwordControl)" class="error">Password is too long</span>
+                <span *ngIf="!hasRangeError(passwordControl)" class="error">Password is incorrect</span>
+            </sp-input>
 
-                <button class="login-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored"
-                        (click)="login()">Sign in
-                </button>
+            <button class="login-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored"
+                    (click)="login()">Sign in
+            </button>
 
-                <sp-checkbox name="remember-me" label="Remember me" [control]="rememberMeControl"></sp-checkbox>
+            <sp-checkbox name="remember-me" label="Remember me" [control]="rememberMeControl"></sp-checkbox>
 
-            </form>
+        </form>
 
-        </div>
-        <div class="mdl-card__actions mdl-card--border">
+        <div class="extra-actions">
             <sp-link [routerLink]="['SignUp']" label="Create account"></sp-link>
             <sp-link [routerLink]="['RestoreAccess']" label="Forgot password?"></sp-link>
         </div>
-    </div>
+    </sp-card>
 </div>
