--- a/lib/account-management/login/login.component.html
+++ b/lib/account-management/login/login.component.html
@@ -18,9 +18,7 @@
                 <span *ngIf="!hasRangeError(passwordControl)" class="error">Password is incorrect</span>
             </sp-input>
 
-            <button class="login-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored"
-                    (click)="login()">Sign in
-            </button>
+            <sp-button (click)="login()" class="login-button" label="Sign in"></sp-button>
 
             <sp-checkbox name="remember-me" label="Remember me" [control]="rememberMeControl"></sp-checkbox>
 
