--- a/lib/account-management/sign-up/sign-up.component.less
+++ b/lib/account-management/sign-up/sign-up.component.less
@@ -3,9 +3,9 @@
 	display: flex;
 	align-items: center;
 	flex-direction: column;
-	padding-top: 64px;
+	padding-top: 32px;
 
-	& .sign-up-card.mdl-card {
+	& .sign-up-card {
 
 		width: 512px;
 
@@ -14,8 +14,6 @@
 			flex-direction: column;
 			align-items: center;
 
-			padding-bottom: 32px;
-
 			& > * {
 				width: 90%;
 			}
@@ -23,7 +21,7 @@
 			& .name-group{
 				display: flex;
 				justify-content: space-between;
-				& .mdl-textfield{
+				& input{
 					width: 218px;
 				}
 			}
