--- a/lib/shared/components/controls/button/button.component.html
+++ b/lib/shared/components/controls/button/button.component.html
@@ -1,3 +1,4 @@
-<button class="login-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored"
-        (click)="onClick">{{label}}
+<button class="login-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect"
+        [ngClass]="{'mdl-button--accent': accent, 'mdl-button--colored': !accent}"
+        (click)="onClick()">{{label}}
 </button>
