--- a/lib/account-management/restore-access/restore-access-code/restore-access-code.component.html
+++ b/lib/account-management/restore-access/restore-access-code/restore-access-code.component.html
@@ -3,14 +3,10 @@
 
     <div class="input-group">
         <div class="input-control">
-
-            <input type="text"
-                   name="code"
-                   id="code"
-                   class="code"
-                   placeholder="XXXXXX"
-                   ngControl="code"/>
+            <input type="text" name="code" id="code" class="code" placeholder="XXXXXX" ngControl="code" #code="ngForm"/>
         </div>
+        <sp-validation-notification *ngIf="isRequired(code)" [message]="'Restore code is required'"></sp-validation-notification>
+        <sp-validation-notification *ngIf="!hasRangeError(code)" [message]="'Restore code is incorrect'"></sp-validation-notification>
         <a mdRaisedButton class="md-primary next-btn" (click)="applyCode()">Next</a>
     </div>
 </form>
