--- a/lib/account-management/restore-access/change-password/change-password.component.html
+++ b/lib/account-management/restore-access/change-password/change-password.component.html
@@ -1,7 +1,8 @@
 <form name="change-password-form" class="form" [ngFormModel]="form">
 
     <div class="description">Change password</div>
-    <div class="description">Please insert a new password</div>
+    <div class="description" *ngIf="!isPasswordChangingError">Please insert a new password</div>
+    <div class="error" *ngIf="isPasswordChangingError" id="password-changing-error" >You have inserted deprecated password, please, change it to new one</div>
 
     <sp-input name="new-password" type="password" placeholder="New password*" [control]="passwordControl">
         <span *ngIf="isRequired(passwordControl)" class="error">Password is required</span>
