[SP-85] Reduced restore access state. Fixed restore access reducer tests

--- a/lib/account-management/restore-access/change-password/change-password.component.html
+++ b/lib/account-management/restore-access/change-password/change-password.component.html
@@ -1,14 +1,13 @@
 <form name="change-password-form" class="form" [ngFormModel]="form">
 
-    <div class="description">Change password</div>
-    <div class="description" *ngIf="!isPasswordChangingError">Please insert a new password</div>
-    <div class="error" *ngIf="isPasswordChangingError" id="password-changing-error" >You have inserted deprecated password, please, change it to new one</div>
+    <div class="description">Please insert a new password</div>
 
     <sp-input name="new-password" type="password" placeholder="New password*" [control]="passwordControl">
         <span *ngIf="isRequired(passwordControl)" class="error">Password is required</span>
         <span *ngIf="isInsufficientLength(passwordControl)" class="error">Password is too short</span>
         <span *ngIf="isLengthExcess(passwordControl)" class="error">Password is too long</span>
         <span *ngIf="!hasRangeError(passwordControl)" class="error">Password is incorrect</span>
+        <span *ngIf="isPasswordChangingError" class="error">You have inserted deprecated password, please, change it to new one</span>
     </sp-input>
 
     <sp-input name="repeat-password" type="password" placeholder="Repeat password*" [control]="passwordRepeatControl">
