--- a/lib/account-management/login/login.component.html
+++ b/lib/account-management/login/login.component.html
@@ -18,7 +18,7 @@
                 <span *ngIf="!hasRangeError(passwordControl)" class="error">Password is incorrect</span>
             </sp-input>
 
-            <div class="error" *ngIf="!areCredentialsValid" id="login-error"> {{ errorMessage }} </div>
+            <div class="error" *ngIf="errorMessage != null" id="login-error"> {{ errorMessage }} </div>
 
             <sp-button (click)="login()" class="login-button" label="Sign in"></sp-button>
 
