--- a/lib/account-management/sign-up/sign-up-code/sign-up-code.component.html
+++ b/lib/account-management/sign-up/sign-up-code/sign-up-code.component.html
@@ -7,6 +7,7 @@
     <sp-input name="code" placeholder="Code*" [control]="codeControl">
         <span *ngIf="isRequired(codeControl)" class="error">Code is required</span>
         <span *ngIf="!hasRequiredError(codeControl)" class="error">Code is incorrect</span>
+        <span *ngIf="isApplyingCodeError" class="error">Mismatching of confirming code, check input accuracy</span>
     </sp-input>
 
     <sp-button class="confirm-button" label="Confirm" (click)="confirmCode()"></sp-button>
