--- a/lib/account-management/sign-up/sign-up.component.less
+++ b/lib/account-management/sign-up/sign-up.component.less
@@ -33,5 +33,14 @@
 				padding: 20px 0;
 			}
 		}
+
+		& .extra-actions {
+
+			& .notification {
+				color: orange;
+				font-size: 90%;
+				padding: 0 16px;
+			}
+		}
 	}
 }
