[SP-69] Fixed logic

--- a/lib/account-management/sign-up/sign-up.component.html
+++ b/lib/account-management/sign-up/sign-up.component.html
@@ -3,6 +3,9 @@
 
 		<div class="title">Sign Up</div>
 
+		<div class="notification warning" *ngIf="isConfirmationCodeResent">Confirmation code was resent</div>
+		<div class="notification error" *ngIf="isConfirmationCodeResentError">Error while resending confirmation code</div>
+
 		<div class="content">
 			<sp-sign-up-form *ngIf="!isFormSent"></sp-sign-up-form>
 			<sp-sign-up-code *ngIf="isFormSent"></sp-sign-up-code>
@@ -11,7 +14,6 @@
 		<div class="extra-actions">
 			<sp-link *ngIf="!isFormSent" [routerLink]="['Login']" label="Sign in"></sp-link>
 			<sp-link *ngIf="isFormSent" label="Resend code" (click)="resendCode()"></sp-link>
-			<div class="notification" *ngIf="isConfirmationCodeResent">Confirmation code was resent</div>
 		</div>
 	</sp-card>
 </div>
