--- a/lib/account-management/sign-up/sign-up.component.less
+++ b/lib/account-management/sign-up/sign-up.component.less
@@ -1,21 +1,21 @@
 .sign-up {
 
-	display: flex;
-	align-items: center;
-	flex-direction: column;
-	padding-top: 32px;
+   display: flex;
+   align-items: center;
+   flex-direction: column;
+   padding-top: 32px;
 
-	& .sign-up-card {
+   & .sign-up-card {
 
-		width: 520px;
+      width: 520px;
 
-		& .extra-actions {
+      & .warning {
+         color: orange;
+      }
 
-			& .notification {
-				color: orange;
-				font-size: 90%;
-				padding: 0 16px;
-			}
-		}
-	}
+      & .error {
+         color: red;
+      }
+
+   }
 }
