--- a/lib/shared/components/controls/card/card.component.html
+++ b/lib/shared/components/controls/card/card.component.html
@@ -7,6 +7,7 @@
     </div>
 
     <div class="mdl-card__supporting-text">
+        <ng-content select=".notification"></ng-content>
         <ng-content select=".content"></ng-content>
     </div>
 
