--- a/lib/account-management/sign-up/sign-up-code/sign-up-code.component.html
+++ b/lib/account-management/sign-up/sign-up-code/sign-up-code.component.html
@@ -10,5 +10,5 @@
         <span *ngIf="isApplyingCodeError" class="error">Mismatching of confirming code, check input accuracy</span>
     </sp-input>
 
-    <sp-button class="confirm-button" label="Confirm" (click)="confirmCode()"></sp-button>
+    <sp-button label="Confirm" (click)="confirmCode()"></sp-button>
 </form>
