[SP-98] Changed card component to apply title as parameter instead of transclusion

--- a/lib/account-management/login/login.component.html
+++ b/lib/account-management/login/login.component.html
@@ -1,7 +1,5 @@
 <div class="login">
-    <sp-card class="login-card">
-
-        <div class="title">Login</div>
+    <sp-card class="login-card" title="Login">
 
         <form class="content form" name="login" [ngFormModel]="form">
 
