--- a/lib/account-management/restore-access/restore-access.component.html
+++ b/lib/account-management/restore-access/restore-access.component.html
@@ -1,7 +1,5 @@
 <div class="restore-access">
-    <sp-card class="restore-access-card" [hasExtraActions]="false">
-
-        <div class="title">Account access restoring</div>
+    <sp-card class="restore-access-card" title="Account access restoring" [hasExtraActions]="false">
 
         <div class="content">
             <div *ngIf="!isCodeApplied">
