--- a/lib/account-management/sign-up/sign-up.component.html
+++ b/lib/account-management/sign-up/sign-up.component.html
@@ -1,7 +1,5 @@
 <div class="sign-up">
-	<sp-card class="sign-up-card">
-
-		<div class="title">Sign Up</div>
+	<sp-card class="sign-up-card" title="Sign Up">
 
 		<form name="sign-up" [ngFormModel]="form" class="content form">
 
