--- a/lib/shared/components/controls/card/card.component.html
+++ b/lib/shared/components/controls/card/card.component.html
@@ -1,9 +1,7 @@
 <div class="card mdl-card mdl-shadow--4dp">
 
     <div class="mdl-card__title">
-        <h2 class="mdl-card__title-text">
-            <ng-content select=".title"></ng-content>
-        </h2>
+        <h2 class="mdl-card__title-text">{{title}}</h2>
     </div>
 
     <div class="mdl-card__supporting-text">
