--- a/lib/account-management/restore-access/change-password/change-password.component.html
+++ b/lib/account-management/restore-access/change-password/change-password.component.html
@@ -2,7 +2,8 @@
 
     <div class="description">Please insert a new password</div>
 
-    <sp-input name="new-password" type="password" placeholder="New password*" [control]="passwordControl">
+    <sp-input name="new-password" type="password" placeholder="New password" [required]="true"
+              [control]="passwordControl">
         <span *ngIf="isRequired(passwordControl)" class="error">Password is required</span>
         <span *ngIf="isInsufficientLength(passwordControl)" class="error">Password is too short</span>
         <span *ngIf="isLengthExcess(passwordControl)" class="error">Password is too long</span>
@@ -10,7 +11,8 @@
         <span *ngIf="isPasswordChangingError" class="error">You have inserted deprecated password, please, change it to new one</span>
     </sp-input>
 
-    <sp-input name="repeat-password" type="password" placeholder="Repeat password*" [control]="passwordRepeatControl">
+    <sp-input name="repeat-password" type="password" placeholder="Repeat password" [required]="true"
+              [control]="passwordRepeatControl">
         <span *ngIf="!isEqual(passwordControl, passwordRepeatControl)" class="error">Passwords are not equal</span>
     </sp-input>
 
