--- a/lib/account-management/sign-up/sign-up.component.html
+++ b/lib/account-management/sign-up/sign-up.component.html
@@ -5,24 +5,24 @@
 
 			<div class="name-group">
 
-				<sp-input name="name" placeholder="Name*" [control]="nameControl">
+				<sp-input name="name" placeholder="Name" [required]="true" [control]="nameControl">
 					<span *ngIf="isRequired(nameControl)" class="error">Name is required</span>
 					<span *ngIf="!hasRequiredError(nameControl)" class="error">Name is incorrect</span>
 				</sp-input>
 
-				<sp-input name="surname" placeholder="Surname*" [control]="surnameControl">
+				<sp-input name="surname" placeholder="Surname" [required]="true" [control]="surnameControl">
 					<span *ngIf="isRequired(surnameControl)" class="error">Surname is required</span>
 					<span *ngIf="!hasRequiredError(surnameControl)" class="error">Surname is incorrect</span>
 				</sp-input>
 
 			</div>
 
-			<sp-input name="email" placeholder="Email*" [control]="emailControl">
+			<sp-input name="email" placeholder="Email" [required]="true" [control]="emailControl">
 				<span *ngIf="isRequired(emailControl)" class="error">Email is required</span>
 				<span *ngIf="!hasRequiredError(emailControl)" class="error">Email is incorrect</span>
 			</sp-input>
 
-			<sp-input name="password" type="password" placeholder="Password*"
+			<sp-input name="password" type="password" placeholder="Password" [required]="true"
 					  [control]="passwordControl">
 				<span *ngIf="isRequired(passwordControl)" class="error">Password is required</span>
 				<span *ngIf="isInsufficientLength(passwordControl)" class="error">Password is too short</span>
@@ -30,7 +30,7 @@
 				<span *ngIf="!hasRangeError(passwordControl)" class="error">Password is incorrect</span>
 			</sp-input>
 
-			<sp-input name="password-repeat" type="password" placeholder="Repeat password*"
+			<sp-input name="password-repeat" type="password" placeholder="Repeat password" [required]="true"
 					  [control]="passwordRepeatControl">
 				<span *ngIf="!isEqual(passwordRepeatControl, passwordControl)" class="error">Passwords are not
 					equal</span>
