[SP-87] Fixed placeholder styles on test input fields

--- a/lib/shared/components/controls/text-field/text-field.component.less
+++ b/lib/shared/components/controls/text-field/text-field.component.less
@@ -31,6 +31,10 @@
       color: rgb(63, 81, 181);
     }
   }
+
+  &:not(.is-focused):not(.is-dirty) .mdl-textfield__input:not(:focus):not(.is-dirty) + label{
+    font-size: 16px;
+  }
 }
 
 /*Validation styles based on MDL*/
