--- a/lib/shared/components/controls/text-field/text-field.component.html
+++ b/lib/shared/components/controls/text-field/text-field.component.html
@@ -1,8 +1,6 @@
 <div class="input mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
     <input class="mdl-textfield__input" type="{{type}}" name="{{name}}"
-           id="{{name}}"
-           [ngFormControl]="control"
-           />
+           id="{{name}}" [ngFormControl]="control"/>
     <label class="mdl-textfield__label" for="{{name}}">{{placeholder}}<span *ngIf="required">*</span></label>
 
     <div class="mdl-textfield__error" style="">
