[SP-94] initial dialog component implementation

--- a/lib/errors/unauthorized/unathorized-error.component.html
+++ b/lib/errors/unauthorized/unathorized-error.component.html
@@ -1,1 +1,11 @@
-<div class="unauthorized">You are not authorized</div>
+<div class="unauthorized">
+    <sp-dialog #dialog1 title="Unauthorized">
+        <div class="content">Some content</div>
+    </sp-dialog>
+
+    <button id="show-dialog4" (click)="dialog1.showModal()" type="button"
+            class="mdl-button mdl-button--colored
+                                  mdl-js-button mdl-button--raised">
+        Show Dialog
+    </button>
+</div>
