[SP-94] Dialog component implementation, part 2

--- a/lib/account-management/restore-access/restore-access-code/restore-access-code.component.html
+++ b/lib/account-management/restore-access/restore-access-code/restore-access-code.component.html
@@ -7,5 +7,5 @@
         <span *ngIf="isInvalidCode" class="error">Invalid code</span>
     </sp-input>
 
-    <sp-button (click)="applyCode()" label="Next"></sp-button>
+    <sp-button (click)="applyCode()" label="Next" [fill]="true"></sp-button>
 </form>
