--- a/lib/account-management/restore-access/restore-access-email/restore-access-email.component.html
+++ b/lib/account-management/restore-access/restore-access-email/restore-access-email.component.html
@@ -10,5 +10,5 @@
         <span *ngIf="isUserNotFound" id="user-not-found-error" class="error">User not found</span>
     </sp-input>
 
-    <sp-button (click)="getCode()" label="Next"></sp-button>
+    <sp-button (click)="getCode()" label="Next" [fill]="true"></sp-button>
 </form>
