--- a/lib/account-management/sign-up/sign-up.component.html
+++ b/lib/account-management/sign-up/sign-up.component.html
@@ -43,7 +43,7 @@
 				<sp-radio id="female" name="gender" label="Female" [control]="genderControl" value="female"></sp-radio>
 			</div>
 
-			<sp-button class="sign-up-button" label="Sign up"></sp-button>
+			<sp-button class="sign-up-button" label="Sign up" [fill]="true"></sp-button>
 		</form>
 
 		<div class="extra-actions">
