--- a/lib/shared/components/controls/button/button.component.html
+++ b/lib/shared/components/controls/button/button.component.html
@@ -1,4 +1,4 @@
 <button class="login-button mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect"
-        [ngClass]="{'mdl-button--accent': accent, 'mdl-button--colored': !accent}"
+        [ngClass]="{'mdl-button--accent': accent, 'mdl-button--colored': !accent, 'fill': fill}"
         (click)="onClick()">{{label}}
 </button>
