--- a/lib/account-management/login/login.component.html
+++ b/lib/account-management/login/login.component.html
@@ -20,7 +20,7 @@
 
             <div class="error" *ngIf="errorMessage != null" id="login-error"> {{ errorMessage }} </div>
 
-            <sp-button (click)="login()" class="login-button" label="Sign in"></sp-button>
+            <sp-button (click)="login()" class="login-button" [fill]="true" label="Sign in"></sp-button>
 
             <sp-checkbox name="remember-me" label="Remember me" [control]="rememberMeControl"></sp-checkbox>
 
