--- a/lib/account-management/restore-access/change-password/change-password.component.html
+++ b/lib/account-management/restore-access/change-password/change-password.component.html
@@ -14,6 +14,6 @@
         <span *ngIf="!isEqual(passwordControl, passwordRepeatControl)" class="error">Passwords are not equal</span>
     </sp-input>
 
-    <sp-button (click)="applyPasswordChanging()" label="Change password"></sp-button>
+    <sp-button (click)="applyPasswordChanging()" label="Change password" [fill]="true"></sp-button>
 
 </form>
