--- a/lib/errors/unauthorized/unathorized-error.component.html
+++ b/lib/errors/unauthorized/unathorized-error.component.html
@@ -1,6 +1,6 @@
 <div class="unauthorized">
-    <sp-dialog #dialog1 title="Unauthorized">
-        <div class="content">Some content</div>
+    <sp-dialog #dialog1 title="Unauthorized" [actions]="dialogActions">
+        <div class="content">Some content dsf sd dsf dsf dsf df dsf dfd sfds ds fdsf sdf</div>
     </sp-dialog>
 
     <button id="show-dialog4" (click)="dialog1.showModal()" type="button"
