--- a/lib/shared/components/controls/dialog/dialog.component.html
+++ b/lib/shared/components/controls/dialog/dialog.component.html
@@ -1,14 +1,11 @@
-<rbi-dialog class="mdl-dialog" (close)="showClose(dialog1.returnValue)">
+<rbi-dialog class="mdl-dialog">
     <h4 class="mdl-dialog__title">{{title}}</h4>
     <div class="mdl-dialog__content">
         <ng-content select=".content"></ng-content>
     </div>
     <div class="mdl-dialog__actions">
-        <button (click)="dialog1.close('Agree')" type="button"
-                class="mdl-button">Agree
-        </button>
-        <button (click)="dialog1.close('Disagree')" type="button"
-                class="mdl-button close">Disagree
+        <button *ngFor="let action of actions" (click)="action.execute()" type="button" class="mdl-button">
+            {{action.title}}
         </button>
     </div>
 </rbi-dialog>
